<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/greeting_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_about"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="showAbout"
        app:layout_constraintTop_toBottomOf="@+id/greetingText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/goToDeterminantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_determinant"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startDeterminant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton"
        />

    <Button
        android:id="@+id/goToInverseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_inverse"
        android:onClick="startInverse"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToDeterminantButton"
        />

    <Button
        android:id="@+id/goToAddSubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_addsub"
        android:textSize="20sp"
        android:onClick="startAddSub"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToInverseButton"
        />

    <Button
        android:id="@+id/goToMultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_mult"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startMult"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToAddSubButton"
        />

    <Button
        android:id="@+id/goToGraphicsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_graphics"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startGraphics"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToMultButton"
        />

    <Button
        android:id="@+id/goToUnivList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Список університетів"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startUnivList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToGraphicsButton"
        />

    <Button
        android:id="@+id/goToUnivSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вибірка університетів"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startSelection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToUnivList"
        />

    <Button
        android:id="@+id/goToUnivMaxMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Кращі і гірші показники"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startMaxMin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToUnivSelection"
        />

    <Button
        android:id="@+id/goToContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вибірка контактів"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startContacts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToUnivMaxMin"
        />

    <Button
        android:id="@+id/goToTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Керівництво користувача"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10sp"
        android:onClick="startTutorial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToContacts"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>